--- a/app/views/about/aboutView.css
+++ b/app/views/about/aboutView.css
@@ -1,6 +1,19 @@
+
+.big-stevie-container {
+  position: relative;
+}
+
+.stevie {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+}
+
 .landing {
   background-image : url("/images/wave.svg");
-  background-color : #97C4D3;//#afd9dd;//#8FC9BD;
+  background-color : #97C4D3;
   padding: 1.5em;
 }
 
@@ -22,8 +35,6 @@
   text-shadow: 0px 3px #56AFD1;
 }
 
-img.stevie {
-}
 
 .stevie-subheader {
   font-size: 1.3em;
