--- a/app/views/about/aboutView_.jade
+++ b/app/views/about/aboutView_.jade
@@ -1,7 +1,10 @@
-.row.landing.text-center
+.row.landing.background-scroll.text-center
   .col-md-12
-    img.stevie.img-responsive(src="/images/stevie-circle.svg")
-    
+
+    .big-stevie-container.img-responsive
+      img.floating.stevie.img-responsive(src="/images/stevie-standalone.svg")
+      img.img-responsive(src="/images/stevie-circle.svg")
+
     p.lead 
       | Печать фотографий из 
       b Instagram
