--- a/app/views/about/aboutView_.jade
+++ b/app/views/about/aboutView_.jade
@@ -35,6 +35,6 @@
   .col-md-12.text-center
     | Проект &laquo;StevieWhale&raquo;, 2014
     br 
-    small Свяжитесь с 
-      a(href="http://molefrog.com") Лешей
-      | , если у вас возникли вопросы
+    | Свяжитесь с 
+    a(href="http://molefrog.com") Лешей
+    | , если у вас возникли вопросы
