Streaming styling in Station#show route

--- a/app/views/station/show/stationView_.jade
+++ b/app/views/station/show/stationView_.jade
@@ -2,49 +2,50 @@
   .station-item
     h1
       =station.title 
-      | 
+      | &nbsp;
       case station.online
         when true 
           span.label.label-success Онлайн
         default
           span.label.label-warning Оффлайн
-      
-    h2 
-      if jade.auth()
-        .btn-group.btn-group-sm
-          button.btn.btn-default.dropdown-toggle(type="button" data-toggle="dropdown")
-            i.fa.fa-gear
-            | 
-            span.caret
-          ul.dropdown-menu(role="menu")
-            li
-              a.edit-button(href=jade.url('station_edit', {name : station.name}))
-                i.fa.fa-edit
-                |  Редактировать
-            li
-              a.edit-button(href=jade.url('station_rename', {name : station.name}))
-                i.fa.fa-cloud
-                |  Сменить URL
+      h2 
+        if jade.auth()
+          .btn-group.btn-group-sm
+            button.btn.btn-default.dropdown-toggle(type="button" data-toggle="dropdown")
+              i.fa.fa-gear
+              | 
+              span.caret
+            ul.dropdown-menu(role="menu")
+              li
+                a.edit-button(href=jade.url('station_edit', {name : station.name}))
+                  i.fa.fa-edit
+                  |  Редактировать
+              li
+                a.edit-button(href=jade.url('station_rename', {name : station.name}))
+                  i.fa.fa-cloud
+                  |  Сменить URL
 
-            li
-              a.secret-button(href="#")
-                i.fa.fa-asterisk
-                |  Показать пароль
+              li
+                a.secret-button(href="#")
+                  i.fa.fa-asterisk
+                  |  Показать пароль
 
-            li
-              a.delete-button(href="#" data-toggle="modal" data-target=".delete-modal")
-                i.fa.fa-trash-o
-                |  Удалить
-      |         
-      small= station.subtitle
-      
-    if station.streaming
-      h4 Прямой эфир
-      canvas.video-canvas(width="240" height="240")
-    h3 Как забирать фотографии с этой станции?
-    
-    .markdown
-      != jade.markdown(station.instructions)
+              li
+                a.delete-button(href="#" data-toggle="modal" data-target=".delete-modal")
+                  i.fa.fa-trash-o
+                  |  Удалить
+        |         
+        small= station.subtitle
+
+    .station-info.row
+      .video-streaming.col-md-4
+        canvas.video-canvas(width="240" height="240").tooltip-button(data-toggle="tooltip")
+
+      .station-title.col-md-8
+        h3 Как забирать фотографии с этой станции?
+        
+        .markdown
+          != jade.markdown(station.instructions)
     .markdown
       != jade.markdown(station.description)
 
