--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -2989,80 +2989,51 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   }
 }
 
-
-.big-stevie-container {
+.landing {
+  background-image: url("/images/wave.svg");
+  background-color: #97c4d3;
+  padding: 1.5em;
+}
+.landing img {
+  margin: 0 auto;
+}
+.landing .big-stevie-container {
   position: relative;
 }
-
-.stevie {
+.landing .big-stevie-container .stevie {
   position: absolute;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
 }
-
-.landing {
-  background-image : url("/images/wave.svg");
-  background-color : #97C4D3;
-  padding: 1.5em;
-}
-
-.footer {
-    background-color : #34495e;
-    color : #D1DAE4;
-    padding: 1em;
-    font-size: 0.9em;
-    font-weight: 100;
-}
-
-.stevie-header {
-  font-family: 'BebasNeueCyrillic';
-  font-size: 5em;
-  font-weight: 800;
-  padding: 10px;
-  margin: 0;
-  color: #EC7085;
-
-  text-shadow: 0px 3px #56AFD1;
-}
-
-
-.stevie-subheader {
-  font-size: 1.3em;
-  font-weight: 200;
-}
-
-.icon-content {
-  padding: 1em;
-}
-
-
 .how-it-works {
   background-color: #2c3e50;
-
-  color:#DADADA;
+  color: #dadada;
 }
-
-h1.hipster-header {
-  color: #F3F3F3;
-  font-family: 'BebasNeueCyrillic';
-}
-
 .how-it-works .lead {
   font-size: 1.2em;
   font-weight: 100;
-  color : #eeeeee;
+  color: #eee;
 }
-
-.super-icon {
-  width : 100px;
+.how-it-works h1.hipster-header {
+  color: #f3f3f3;
+  font-family: 'BebasNeueCyrillic';
+}
+.how-it-works .icon-content {
+  padding: 1em;
+}
+.how-it-works .icon-content .super-icon {
+  width: 100px;
   height: 100px;
   margin: 0 auto;
 }
-
-.landing img {
-  margin: 0 auto;
+.footer {
+  background-color: #34495e;
+  color: #d1dae4;
+  padding: 1em;
+  font-size: 0.9em;
+  font-weight: 100;
 }
 
 .login-form {
@@ -3070,10 +3041,9 @@ h1.hipster-header {
   padding: 15px;
   margin: 0 auto;
 }
-.logo-container {
+.login-form .logo-container {
   padding: 1em;
 }
-
 .login-form .form-control {
   text-align: center;
   position: relative;
@@ -3082,7 +3052,6 @@ h1.hipster-header {
   height: auto;
   padding: 10px;
 }
-
 .login-form input[type="text"] {
   margin-bottom: -1px;
   border-bottom-left-radius: 0;
@@ -3094,54 +3063,46 @@ h1.hipster-header {
   border-top-right-radius: 0;
   border-top-width: 1px;
 }
-
-.login-form input[type="password"]:not(:focus)  {
-  border-top-color : rgba(0,0,0,0);
-
-} 
+.login-form input[type="password"]:not(:focus) {
+  border-top-color: rgba(0,0,0,0);
+}
 
 .shot-grid-item {
   padding: 5px;
   overflow: hidden;
 }
-
-.polaroid {
+.shot-grid-item .polaroid {
   margin: 0;
   margin-bottom: 5px;
   padding: 5%;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
-  border: 1px solid #BDC2CC;
+  border: 1px solid #bdc2cc;
 }
-
-.photo-user {
-  font-size: 0.85em;
-  white-space: nowrap;
-}
-
-.photo-user a {
-  color : #555555;
-}
-.photo-user small {
-  color : #888888;
-}
-
-.photo-status {
-  margin: 0.4em 0;
-}
-
-.polaroid-photo {
+.shot-grid-item .polaroid-photo {
   width: 100%;
   margin-bottom: 5px;
 }
-
-.shot-image {
-	margin: 2em auto;
+.shot-grid-item .photo-user {
+  font-size: 0.85em;
+  white-space: nowrap;
+}
+.shot-grid-item .photo-user a {
+  color: #555;
+}
+.shot-grid-item .photo-user small {
+  color: #888;
+}
+.shot-grid-item .photo-status {
+  margin: 0.4em 0;
 }
 
-@import url(http://fonts.googleapis.com/css?family=Istok+Web:400,700|Russo+One|Exo+2:400,900,800,600,700,500,200,100,300);
+.shot-image {
+  margin: 2em auto;
+}
 
-.navbar {
-  font-size : 1.15em;
+.site-navigation.navbar {
+  font-size: 1.15em;
   letter-spacing: 0.5px;
   font-weight: 200;
   margin-bottom: 0 !important;
