Removed floating animation for a timme

--- a/app/views/about/aboutView_.jade
+++ b/app/views/about/aboutView_.jade
@@ -2,7 +2,7 @@
   .col-md-12
 
     .big-stevie-container.img-responsive
-      img.floating.stevie.img-responsive(src="/images/stevie-standalone.svg")
+      img.stevie.img-responsive(src="/images/stevie-standalone.svg")
       img.img-responsive(src="/images/stevie-circle.svg")
 
     p.lead 
