--- a/app/views/about/aboutView.styl
+++ b/app/views/about/aboutView.styl
@@ -10,11 +10,13 @@
     position relative
 
     .stevie 
+      z-index 6
       position absolute
       margin-left auto
       margin-right auto
       left 0
       right 0
+      height auto
 
 
 .how-it-works 
