--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -3001,11 +3001,13 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   position: relative;
 }
 .landing .big-stevie-container .stevie {
+  z-index: 6;
   position: absolute;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
+  height: auto;
 }
 .how-it-works {
   background-color: #2c3e50;
