Added shot single view

--- a/app/views/site/siteView_.jade
+++ b/app/views/site/siteView_.jade
@@ -3,10 +3,10 @@ nav.site-navigation.navbar.navbar-default.navbar-static-top(role="navigation")
     ul.nav.navbar-nav
       li
         a(href=jade.url("static#about"))
-          |  О Проекте
+          |  О проекте
       li 
         a(href="#{jade.url('stations#index')}")
-          |  Печатные Станции
+          |  Печатные станции
       li 
         a(href="#{jade.url('shots#index')}")
           |  Фотографии
