--- a/app/views/site/siteView.styl
+++ b/app/views/site/siteView.styl
@@ -1,5 +1,22 @@
+body
+  font-family: 'Roboto'
+  font-weight: 100
+
+button
+  font-family 'Roboto'
+  font-weight 100 !important
+h1, h2, h3, h4, h5
+  font-family "PT Sans Caption"
+
+.navbar-shift
+  margin-top 61px
+
 .site-navigation.navbar
-  font-size 1.15em
-  letter-spacing 0.5px
-  font-weight 200
-  margin-bottom 0 !important
+  font-family "PT Sans Narrow"
+  font-weight 400
+  background none !important
+  border none !important
+
+  font-size 1.5em
+  letter-spacing 1px
+  margin-bottom -61px !important
