--- a/app/views/about/aboutView.styl
+++ b/app/views/about/aboutView.styl
@@ -1,52 +1,59 @@
+
 .landing
-  background-image  url("/images/wave.svg")
-  background-color  #97C4D3
-  padding 1.5em
+  background-image  url("/images/landing-bg.png")
+  background-size   cover
+  background-color  black
+  padding-top 150px
 
-  img
-    margin 0 auto
+  color white
 
-  .big-stevie-container
-    position relative
+  height 100%
 
-    .stevie 
-      z-index 6
-      position absolute
-      margin-left auto
-      margin-right auto
-      left 0
-      right 0
-      height auto
+  .big-header
+    margin 50px
+    font-family "PT Sans Narrow"
+    font-size 70px
+    font-weight bold
+    line-height 65px
 
-
-.how-it-works 
-  background-color #2c3e50
-  color #DADADA
-
-  .lead
-    font-size 1.2em
+  .big-header-subtitle
+    font-size 24px
     font-weight 100
-    color  #eeeeee
+    font-family 'PT Sans'
+    margin-bottom 50px
 
-  h1.hipster-header 
-    color #F3F3F3
-    font-family 'BebasNeueCyrillic'
-  
-  .icon-content 
-    padding 1em
 
-    .super-icon 
-      width  100px
-      height 100px
-      margin 0 auto
-      
 
-.footer 
-  background-color  #34495e
-  color  #D1DAE4
-  padding 1em
-  font-size 0.9em
-  font-weight 100
+// .how-it-works
+//   background-color black
+//   color white
+
+//   .lead
+//     font-size 1.2em
+//     font-weight 100
+
+//   h1.hipster-header
+//     font-family 'PT Sans Narrow'
+//     font-weight bold
+
+//   .icon-content
+//     padding 1em
+
+//     .super-icon
+//       // border-radius 9999px
+//       // background-color red
+//       width  150px
+//       height 150px
+//       // padding 50px
+//       margin 0 auto
+
+
+// .footer
+//   background-color  #34495e
+//   color  #D1DAE4
+//   padding 1em
+//   font-size 0.9em
+//   font-weight 100
 
 
 
