--- a/app/views/about/aboutView_.jade
+++ b/app/views/about/aboutView_.jade
@@ -1,40 +1,49 @@
+
 .row.landing.background-scroll.text-center
   .col-md-12
+    .big-header
+      | Снимайте, печатайте,
+      br
+      | радуйтесь!
+    .row
+      .col-md-2
+      .col-md-8
+        .big-header-subtitle
+          | Представляем независимый проект по печати фотографий из Instagram
+          | &mdash; StevieWhale
 
-    .big-stevie-container.img-responsive
-      img.stevie.img-responsive(src="/images/stevie-standalone.svg")
-      img.img-responsive(src="/images/stevie-circle.svg")
+        button.btn.btn-lg.btn-success Ух ты, как интересно!
+      .col-md-2
 
-    p.lead 
-      | Печать фотографий из 
-      b Instagram
-.row.how-it-works.text-center
-  .col-md-12
-    .container
-      h1.hipster-header Как это работает?
-      .row
-        .col-md-4.icon-content
-          img.super-icon.img-responsive(src="/images/photo.svg")
-          h3 Публикуйте
-          p.lead
-            | Выложите фотографию в Instagram
-            | с хештегом 
-            a(href=jade.url('shots#index')) #steviewhale
-        .col-md-4.icon-content
-          img.super-icon.img-responsive(src="/images/print.svg")
-          h3 Печатайте
-          p.lead
-            | Фотография напечатается на одной из 
-            a(href=jade.url('stations#index')) печатных станций
-        .col-md-4.icon-content
-          img.super-icon.img-responsive(src="/images/heart.svg")
-          h3 Забирайте
-          p.lead
-            | Свяжитесь с владельцем станции, чтобы забрать фотографию
-.row.footer
-  .col-md-12.text-center
-    | Проект &laquo;StevieWhale&raquo;, 2014
-    br 
-    | Свяжитесь с 
-    a(href="http://molefrog.com") Лешей
-    | , если у вас возникли вопросы
+
+
+//- .row.how-it-works.text-center
+//-   .col-md-12
+//-     .container
+//-       h1.hipster-header Как это работает?
+//-       .row
+//-         .col-md-4.icon-content
+//-           img.super-icon.img-responsive(src="/images/photo.svg")
+//-           h3 Публикуйте
+//-           p.lead
+//-             | Выложите фотографию в Instagram
+//-             | с хештегом
+//-             a(href=jade.url('shots#index')) #steviewhale
+//-         .col-md-4.icon-content
+//-           img.super-icon.img-responsive(src="/images/print.svg")
+//-           h3 Печатайте
+//-           p.lead
+//-             | Фотография напечатается на одной из
+//-             a(href=jade.url('stations#index')) печатных станций
+//-         .col-md-4.icon-content
+//-           img.super-icon.img-responsive(src="/images/heart.svg")
+//-           h3 Забирайте
+//-           p.lead
+//-             | Свяжитесь с владельцем станции, чтобы забрать фотографию
+//- .row.footer
+//-   .col-md-12.text-center
+//-     | Проект &laquo;StevieWhale&raquo;, 2014
+//-     br
+//-     | Свяжитесь с
+//-     a(href="http://molefrog.com") Лешей
+//-     | , если у вас возникли вопросы
