--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -2758,284 +2758,27 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 	     url('/fonts/BebasNeueCyrillic/BebasNeueCyrillic.svg#BebasNeueCyrillic') format('svg');
 }
 
-.background-scroll {
-  background-attachment: fixed;
-  -webkit-animation-name: WaveScroll;
-  -moz-animation-name: WaveScroll;
-  -o-animation-name: WaveScroll;
-  -ms-animation-name: WaveScroll;
-  animation-name: WaveScroll;
-  -webkit-animation-duration: 50s;
-  -moz-animation-duration: 50s;
-  -o-animation-duration: 50s;
-  -ms-animation-duration: 50s;
-  animation-duration: 50s;
-  -webkit-animation-timing-function: linear;
-  -moz-animation-timing-function: linear;
-  -o-animation-timing-function: linear;
-  -ms-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-  -moz-animation-iteration-count: infinite;
-  -o-animation-iteration-count: infinite;
-  -ms-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-delay: 0s;
-  -moz-animation-delay: 0s;
-  -o-animation-delay: 0s;
-  -ms-animation-delay: 0s;
-  animation-delay: 0s;
-  -webkit-animation-direction: alternate;
-  -moz-animation-direction: alternate;
-  -o-animation-direction: alternate;
-  -ms-animation-direction: alternate;
-  animation-direction: alternate;
-  -webkit-animation-play-state: running;
-  -moz-animation-play-state: running;
-  -o-animation-play-state: running;
-  -ms-animation-play-state: running;
-  animation-play-state: running;
-}
-.floating {
-  -webkit-animation-name: Floating;
-  -moz-animation-name: Floating;
-  -o-animation-name: Floating;
-  -ms-animation-name: Floating;
-  animation-name: Floating;
-  -webkit-animation-duration: 3s;
-  -moz-animation-duration: 3s;
-  -o-animation-duration: 3s;
-  -ms-animation-duration: 3s;
-  animation-duration: 3s;
-  -webkit-animation-timing-function: ease-in-out;
-  -moz-animation-timing-function: ease-in-out;
-  -o-animation-timing-function: ease-in-out;
-  -ms-animation-timing-function: ease-in-out;
-  animation-timing-function: ease-in-out;
-  -webkit-animation-iteration-count: infinite;
-  -moz-animation-iteration-count: infinite;
-  -o-animation-iteration-count: infinite;
-  -ms-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-}
-@-moz-keyframes Floating {
-  0% {
-    -webkit-transform: translate(0, 0px);
-    -moz-transform: translate(0, 0px);
-    -o-transform: translate(0, 0px);
-    -ms-transform: translate(0, 0px);
-    transform: translate(0, 0px);
-  }
-
-  65% {
-    -webkit-transform: translate(0, 15px);
-    -moz-transform: translate(0, 15px);
-    -o-transform: translate(0, 15px);
-    -ms-transform: translate(0, 15px);
-    transform: translate(0, 15px);
-  }
-
-  100% {
-    -webkit-transform: translate(0, 0px);
-    -moz-transform: translate(0, 0px);
-    -o-transform: translate(0, 0px);
-    -ms-transform: translate(0, 0px);
-    transform: translate(0, 0px);
-  }
-}
-@-webkit-keyframes Floating {
-  0% {
-    -webkit-transform: translate(0, 0px);
-    -moz-transform: translate(0, 0px);
-    -o-transform: translate(0, 0px);
-    -ms-transform: translate(0, 0px);
-    transform: translate(0, 0px);
-  }
-
-  65% {
-    -webkit-transform: translate(0, 15px);
-    -moz-transform: translate(0, 15px);
-    -o-transform: translate(0, 15px);
-    -ms-transform: translate(0, 15px);
-    transform: translate(0, 15px);
-  }
-
-  100% {
-    -webkit-transform: translate(0, 0px);
-    -moz-transform: translate(0, 0px);
-    -o-transform: translate(0, 0px);
-    -ms-transform: translate(0, 0px);
-    transform: translate(0, 0px);
-  }
-}
-@-o-keyframes Floating {
-  0% {
-    -webkit-transform: translate(0, 0px);
-    -moz-transform: translate(0, 0px);
-    -o-transform: translate(0, 0px);
-    -ms-transform: translate(0, 0px);
-    transform: translate(0, 0px);
-  }
-
-  65% {
-    -webkit-transform: translate(0, 15px);
-    -moz-transform: translate(0, 15px);
-    -o-transform: translate(0, 15px);
-    -ms-transform: translate(0, 15px);
-    transform: translate(0, 15px);
-  }
-
-  100% {
-    -webkit-transform: translate(0, 0px);
-    -moz-transform: translate(0, 0px);
-    -o-transform: translate(0, 0px);
-    -ms-transform: translate(0, 0px);
-    transform: translate(0, 0px);
-  }
-}
-@-ms-keyframes Floating {
-  0% {
-    -webkit-transform: translate(0, 0px);
-    -moz-transform: translate(0, 0px);
-    -o-transform: translate(0, 0px);
-    -ms-transform: translate(0, 0px);
-    transform: translate(0, 0px);
-  }
-
-  65% {
-    -webkit-transform: translate(0, 15px);
-    -moz-transform: translate(0, 15px);
-    -o-transform: translate(0, 15px);
-    -ms-transform: translate(0, 15px);
-    transform: translate(0, 15px);
-  }
-
-  100% {
-    -webkit-transform: translate(0, 0px);
-    -moz-transform: translate(0, 0px);
-    -o-transform: translate(0, 0px);
-    -ms-transform: translate(0, 0px);
-    transform: translate(0, 0px);
-  }
-}
-@keyframes Floating {
-  0% {
-    -webkit-transform: translate(0, 0px);
-    -moz-transform: translate(0, 0px);
-    -o-transform: translate(0, 0px);
-    -ms-transform: translate(0, 0px);
-    transform: translate(0, 0px);
-  }
-
-  65% {
-    -webkit-transform: translate(0, 15px);
-    -moz-transform: translate(0, 15px);
-    -o-transform: translate(0, 15px);
-    -ms-transform: translate(0, 15px);
-    transform: translate(0, 15px);
-  }
-
-  100% {
-    -webkit-transform: translate(0, 0px);
-    -moz-transform: translate(0, 0px);
-    -o-transform: translate(0, 0px);
-    -ms-transform: translate(0, 0px);
-    transform: translate(0, 0px);
-  }
-}
-@-moz-keyframes WaveScroll {
-  0% {
-    background-position: 0%;
-  }
-
-  100% {
-    background-position: 100%;
-  }
-}
-@-webkit-keyframes WaveScroll {
-  0% {
-    background-position: 0%;
-  }
-
-  100% {
-    background-position: 100%;
-  }
-}
-@-o-keyframes WaveScroll {
-  0% {
-    background-position: 0%;
-  }
-
-  100% {
-    background-position: 100%;
-  }
-}
-@-ms-keyframes WaveScroll {
-  0% {
-    background-position: 0%;
-  }
-
-  100% {
-    background-position: 100%;
-  }
-}
-@keyframes WaveScroll {
-  0% {
-    background-position: 0%;
-  }
-
-  100% {
-    background-position: 100%;
-  }
-}
 
 .landing {
-  background-image: url("/images/wave.svg");
-  background-color: #97c4d3;
-  padding: 1.5em;
+  background-image: url("/images/landing-bg.png");
+  background-size: cover;
+  background-color: #000;
+  padding-top: 150px;
+  color: #fff;
+  height: 100%;
 }
-.landing img {
-  margin: 0 auto;
+.landing .big-header {
+  margin: 50px;
+  font-family: "PT Sans Narrow";
+  font-size: 70px;
+  font-weight: bold;
+  line-height: 65px;
 }
-.landing .big-stevie-container {
-  position: relative;
-}
-.landing .big-stevie-container .stevie {
-  z-index: 6;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  height: auto;
-}
-.how-it-works {
-  background-color: #2c3e50;
-  color: #dadada;
-}
-.how-it-works .lead {
-  font-size: 1.2em;
+.landing .big-header-subtitle {
+  font-size: 24px;
   font-weight: 100;
-  color: #eee;
-}
-.how-it-works h1.hipster-header {
-  color: #f3f3f3;
-  font-family: 'BebasNeueCyrillic';
-}
-.how-it-works .icon-content {
-  padding: 1em;
-}
-.how-it-works .icon-content .super-icon {
-  width: 100px;
-  height: 100px;
-  margin: 0 auto;
-}
-.footer {
-  background-color: #34495e;
-  color: #d1dae4;
-  padding: 1em;
-  font-size: 0.9em;
-  font-weight: 100;
+  font-family: 'PT Sans';
+  margin-bottom: 50px;
 }
 
 .login-form {
@@ -3103,11 +2846,32 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   margin-top: 1em;
 }
 
+body {
+  font-family: 'Roboto';
+  font-weight: 100;
+}
+button {
+  font-family: 'Roboto';
+  font-weight: 100 !important;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "PT Sans Caption";
+}
+.navbar-shift {
+  margin-top: 61px;
+}
 .site-navigation.navbar {
-  font-size: 1.15em;
-  letter-spacing: 0.5px;
-  font-weight: 200;
-  margin-bottom: 0 !important;
+  font-family: "PT Sans Narrow";
+  font-weight: 400;
+  background: none !important;
+  border: none !important;
+  font-size: 1.5em;
+  letter-spacing: 1px;
+  margin-bottom: -61px !important;
 }
 
 .station-item .station-info .video-streaming {
