Fixed navigation bar active selector; Login state change handling

--- a/app/views/about/aboutView_.jade
+++ b/app/views/about/aboutView_.jade
@@ -2,9 +2,11 @@
 .row.landing.background-scroll.text-center
   .col-md-12
     .big-header
-      | Снимайте, печатайте,
+      | Снимайте,
       br
-      | радуйтесь!
+      | печатайте,
+      br
+      | делитесь!
     .row
       .col-md-2
       .col-md-8
