--- a/app/views/station/list/stationListView_.jade
+++ b/app/views/station/list/stationListView_.jade
@@ -4,7 +4,7 @@
       if jade.auth()
         a.btn.btn-success(href=jade.url("station_create") )
           i.fa.fa-plus
-          |  Создать
+          |  Зарегистрировать
 
       .loading-container
         h2 Загрузка
