--- a/app/views/about/aboutView.styl
+++ b/app/views/about/aboutView.styl
@@ -3,7 +3,7 @@
   background-image  url("/images/landing-bg.png")
   background-size   cover
   background-color  black
-  padding-top 150px
+  // padding-top 150px
 
   color white
 
@@ -14,7 +14,7 @@
     font-family "PT Sans Narrow"
     font-size 70px
     font-weight bold
-    line-height 65px
+    line-height 70px
 
   .big-header-subtitle
     font-size 24px
