--- a/app/views/site/header/headerView_.jade
+++ b/app/views/site/header/headerView_.jade
@@ -1,4 +1,4 @@
-nav.site-navigation.navbar.navbar-default.navbar-static-top
+nav.site-navigation.navbar.navbar-static-top
   .container
     ul.nav.navbar-nav.navbar-left
       li.nav-static
