--- a/app/views/site/siteView.styl
+++ b/app/views/site/siteView.styl
@@ -9,5 +9,7 @@ body
   font-weight: 200
 
 h1, h2, h3, h4, h5, h6
-  font-family "PT Sans Narrow"
+  font-family 'PT Sans Narrow'
 
+.site-container
+  padding 0
