--- a/app/views/site/header/headerView.styl
+++ b/app/views/site/header/headerView.styl
@@ -1,11 +1,11 @@
 @import 'nib'
 
- 
+
 .header-view-container
   &.static-page
     position absolute
     top 0
-    left 0 
+    left 0
     right 0
     .site-navigation
       ul li a:not(:hover)
@@ -15,16 +15,17 @@
 
   // Navigation bar
   .site-navigation
-    * 
+    *
       background none !important
     border none
     padding 0
     margin 0
 
-    ul li 
+    ul li
       a
-        box-sizing: border-box
-        transition color 0.3s ease
+        box-sizing border-box
+        transition color 0.3s ease, border-color 0.3s ease
+
         border 2px solid rgba(0,0,0,0)
         padding 5px
         margin 10px
