--- a/app/views/about/aboutView_.jade
+++ b/app/views/about/aboutView_.jade
@@ -1,7 +1,9 @@
 .landing.text-center
+  .slide.first.active
+  .slide.second
+
   .fade-overlay
     .fake-offset
-
     .centered-container
       .centered
         .container
